; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_domain.c_net_init_proto.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_domain.c_net_init_proto.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.protosw = type { i32 }
%struct.domain = type { i32 }

@PR_ATTACHED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @net_init_proto(%struct.protosw* %0, %struct.domain* %1) #0 {
  %3 = alloca %struct.protosw*, align 8
  %4 = alloca %struct.domain*, align 8
  store %struct.protosw* %0, %struct.protosw** %3, align 8
  store %struct.domain* %1, %struct.domain** %4, align 8
  %5 = call i32 (...) @domain_proto_mtx_lock_assert_held()
  %6 = load %struct.protosw*, %struct.protosw** %3, align 8
  %7 = getelementptr inbounds %struct.protosw, %struct.protosw* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @PR_ATTACHED, align 4
  %10 = and i32 %8, %9
  %11 = call i32 @VERIFY(i32 %10)
  %12 = load %struct.protosw*, %struct.protosw** %3, align 8
  %13 = load %struct.domain*, %struct.domain** %4, align 8
  %14 = call i32 @init_proto(%struct.protosw* %12, %struct.domain* %13)
  ret void
}

declare dso_local i32 @domain_proto_mtx_lock_assert_held(...) #1

declare dso_local i32 @VERIFY(i32) #1

declare dso_local i32 @init_proto(%struct.protosw*, %struct.domain*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
